// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`status Renderer renderers correctly: radio button input 1`] = `
<input
  checked={false}
  className="ant-radio-input"
  disabled={false}
  onChange={[Function]}
  onClick={[Function]}
  onKeyDown={[Function]}
  type="radio"
  value="active"
/>
`;

exports[`status Renderer renderers correctly: radio button input 2`] = `
<input
  checked={false}
  className="ant-radio-input"
  disabled={false}
  onChange={[Function]}
  onClick={[Function]}
  onKeyDown={[Function]}
  type="radio"
  value="complete"
/>
`;

exports[`status Renderer renderers correctly: radio button input 3`] = `
<input
  checked={false}
  className="ant-radio-input"
  disabled={false}
  onChange={[Function]}
  onClick={[Function]}
  onKeyDown={[Function]}
  type="radio"
  value="draft"
/>
`;

exports[`status Renderer renderers correctly: radio button input 4`] = `
<input
  checked={false}
  className="ant-radio-input"
  disabled={false}
  onChange={[Function]}
  onClick={[Function]}
  onKeyDown={[Function]}
  type="radio"
  value="retired"
/>
`;

exports[`status Renderer renderers correctly: radio button label 1`] = `"active"`;

exports[`status Renderer renderers correctly: radio button label 2`] = `"complete"`;

exports[`status Renderer renderers correctly: radio button label 3`] = `"draft"`;

exports[`status Renderer renderers correctly: radio button label 4`] = `"retired"`;
